plugin good added for logging

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -44,6 +44,10 @@
     "dogwater": "^2.3.0",
     "get-env": "^0.5.10",
     "glue": "^4.1.0",
+    "good": "^7.1.0",
+    "good-console": "^6.4.0",
+    "good-file": "^6.0.1",
+    "good-squeeze": "^5.0.2",    
     "hapi": "^16.1.1",
     "hapi-auth-bearer-token": "^5.0.0",
     "joi": "^10.4.1",
