Fix issue with utils folder. This closes #7 and closes #3

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "generators/job",
     "generators/model",
     "generators/route",
-    "generators/service"
+    "generators/service",
+    "utils"
   ],
   "keywords": [
     "hapi",
