--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -4,6 +4,8 @@
   "description":  "<%- description %>",
   "main": "server.js",
   "scripts": {
+    "precommit": "npm test",
+    "prepush": "npm test",
     "test": "lab -a code -l -L -n eslint",
     "test-cov-html": "lab -a code -l -L -n eslint -r html -o coverage.html",
     "start": "node server.js",
@@ -30,6 +32,7 @@
     "eslint-config-hapi": "^10.0.0",
     "eslint-plugin-hapi": "^4.0.0",
     "eslint-plugin-node": "^4.2.2",
+    "husky": "^0.14.3",
     "lab": "^13.0.2",
     "shipit": "^1.0.2",
     "shipit-deploy": "^2.4.0"
@@ -47,7 +50,7 @@
     "good": "^7.1.0",
     "good-console": "^6.4.0",
     "good-file": "^6.0.1",
-    "good-squeeze": "^5.0.2",    
+    "good-squeeze": "^5.0.2",
     "hapi": "^16.1.1",
     "hapi-auth-bearer-token": "^5.0.0",
     "joi": "^10.4.1",
