--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -29,29 +29,29 @@
   "devDependencies": {
     "code": "^4.1.0",
     "eslint": "^4.8.0",
-    "eslint-config-hapi": "^10.0.0",
+    "eslint-config-hapi": "^10.1.0",
     "eslint-plugin-hapi": "^4.0.0",
     "eslint-plugin-node": "^5.2.0",
     "husky": "^0.14.3",
     "lab": "^14.3.1",
-    "shipit": "^1.0.2",
-    "shipit-deploy": "^2.4.0"
+    "shipit-cli": "^3.0.0",
+    "shipit-deploy": "^2.5.1"
   },
   "dependencies": {
     "agenda": "^1.0.0",
-    "async": "^2.3.0",
+    "async": "^2.5.0",
     "boom": "^6.0.0",
     "catbox-memory": "^2.0.4",
     "chairo": "^3.0.0",
     "dogwater": "^2.3.0",
     "get-env": "^0.5.10",
-    "glue": "^4.1.0",
-    "good": "^7.1.0",
+    "glue": "^4.2.0",
+    "good": "^7.3.0",
     "good-console": "^6.4.0",
     "good-file": "^6.0.1",
     "good-squeeze": "^5.0.2",
-    "hapi": "^16.1.1",
-    "hapi-auth-bearer-token": "^5.0.0",
+    "hapi": "^16.6.2",
+    "hapi-auth-bearer-token": "^5.1.0",
     "joi": "^11.1.1",
     "labbable": "^2.1.1",
     "lodash": "^4.17.4",
